# rust-template

./: Cargo.toml
src/: config.rs  main.rs
